--- a/myblog/src/App.css
+++ b/myblog/src/App.css
@@ -135,15 +135,60 @@ ul {
 
 .post-parent:group{
   clear: both;
-  width: 30%;
 }
 
 div#upvotes-section{
-  float: left;
-  margin: 10% 10%;
+  display: inline-block;
+  margin-right: 10%;
 }
 
 .post-content{
 width: 15%;
-float: right;
+display: inline-block;
+}
+
+
+/* COMMENTS */
+#add-comment{
+  border-bottom: 2px solid black;
+  padding: 16px;
+}
+
+#add-comment h3 {
+  margin-bottom: 1%;
+}
+
+#add-comment input, textarea {
+  display: block;
+  margin: 0 auto;
+  width: 300px;
+  padding: 8px;
+  border-radius: 8px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  border: 2px solid black;
+  margin-bottom: 16px;
+}
+
+#add-comment textarea {
+  width: 500px;
+}
+
+#add-comment button {
+  width: 320px;
+}
+
+.comment {
+border-radius: 2%;
+padding: 5%;
+padding: 5%;
+width: 50%;
+margin: 20px 20px;
+background-color: #e9f2ef;
+}
+
+h4.comment-username {
+  margin-bottom: 5%;
+  padding-bottom: 5%;
+  border-bottom: 1px solid #e0e0e0;
 }
