--- a/myblog/src/App.css
+++ b/myblog/src/App.css
@@ -1,3 +1,4 @@
+
 .App {
   text-align: center;
 }
@@ -200,4 +201,12 @@ h4.comment-username {
 
 .showCustomError{
   background-color: yellow;
+}
+
+/* MY ACCOUNT PAGE */
+
+.profile-img{
+  border-radius: 50%;
+  height: 5%;
+  width: 5%;
 }
