--- a/myblog/src/App.css
+++ b/myblog/src/App.css
@@ -7,6 +7,37 @@ p {
   font-size: 24px;
 }
 
+/*HOME PAGE */
+
+
+/*Twitter Iframe */
+.twitter-embed {
+   width: 300px;
+   height: 400px;
+   overflow: auto;
+}
+.twitter-embed::-webkit-scrollbar {
+    width: 12px;
+}
+
+.twitter-embed::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+}
+
+.twitter-embed::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+}
+
+.twitter-timeline{
+  padding: 2050px;
+}
+
+.timeline-Body {
+  padding: 2000px;
+}
+
 /*horizontal nav bar*/
 ul {
   list-style-type: none;
