--- a/myblog/src/App.css
+++ b/myblog/src/App.css
@@ -12,9 +12,9 @@ p {
 
 /*Twitter Iframe */
 .twitter-embed {
-   width: 300px;
-   height: 400px;
-   overflow: auto;
+   width: 250px;
+   height: 500px;
+   overflow: scroll;
 }
 .twitter-embed::-webkit-scrollbar {
     width: 12px;
@@ -30,13 +30,7 @@ p {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
 }
 
-.twitter-timeline{
-  padding: 2050px;
-}
 
-.timeline-Body {
-  padding: 2000px;
-}
 
 /*horizontal nav bar*/
 ul {
