--- a/myblog/src/App.css
+++ b/myblog/src/App.css
@@ -300,3 +300,54 @@ h4.comment-username {
   height: 5%;
   width: 5%;
 }
+
+
+/* MODAL */
+
+.modalStyle {
+  position: absolute;
+  float: left;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background: #f1f3f4;
+  display: table;
+  clear: both;
+}
+
+.modalTitle{
+    border-bottom: 1px solid #ccc;
+    padding: 1rem;
+    margin: 0;
+}
+
+.modalContent{
+  font-weight: bold;
+  align-items: 'center';
+  position: 'absolute';
+  width: 450;
+  box-shadow: theme.shadows[5];
+  padding: 20px;
+}
+
+.modalButton{
+  border: 0;
+      background: #78f89f;
+      border-radius: 5px;
+      padding: 0.5rem 1rem;
+      font-size: 0.8rem;
+      line-height: 1;
+}
+
+.modalStyle input[type=text]{
+  width: 25%;
+padding: 6px 20px;
+margin: 8px 0;
+box-sizing: border-box;
+}
+
+.modalStyle label{
+  float: left;
+  padding-right: 20px;
+  margin-right: 5px;
+}
