--- a/myblog/src/App.css
+++ b/myblog/src/App.css
@@ -1,7 +1,7 @@
 
-.App {
+/* .App {
   text-align: center;
-}
+} */
 
 p {
   font-size: 24px;
@@ -338,6 +338,10 @@ h4.comment-username {
 }
 
 /* MY BEERS CARD */
+.my-account-parent{
+  margin-top: 5%;
+}
+
 .my-beers-parent{
   margin: 5% auto;
 }
@@ -397,11 +401,7 @@ box-sizing: border-box;
   display: block;
 }
 
-.my-beers-title-parent{
-  display: inline-block;
-  width: 55%;
-  position: relative;
-}
+
 
 .my-beers-title{
   display: inline-block;
@@ -409,26 +409,25 @@ box-sizing: border-box;
 }
 
 .my-beers-title-btn{
-  display: inline-block;
-  padding-right: 15px;
-  margin: auto;
-  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 .modal-plus-btn{
-  margin: 0;
-  display: inline-block;
-  margin: 0;
- position: absolute;
- top: 50%;
- -ms-transform: translateY(-50%);
- transform: translateY(-50%);
+  display: flex;
+  margin-left: auto;
+    margin-right: 5%;
+  }
+
+.modal-plus-btn-parent{
+  border: 1px solid black;
+  width: 15%;
+  margin-left: auto;
 }
 
 
-
 .MuiCard-root {
-  overflow: initial !important;
   width: 100%;
 }
 .MuiCard-root {
@@ -437,4 +436,59 @@ box-sizing: border-box;
 
 body {
   background-color: #f1f3f4;
+}
+
+
+
+
+
+
+/* MY ACCOUNT TOP MODAL  */
+.img-username-changeimg-email, .member-posts-comments, .user-comments-parent{
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.account-page-titles, .profile-img, .email-outline, .person-outline, .posts-outline, .comments-outline{
+  margin: 0% 2.5% 0% 5%;
+  text-align: left;
+}
+
+.account-page-title{
+  margin-left: 0px;
+}
+
+.form-group{
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-left: auto;
+  margin-right: 5%;
+}
+
+
+.account-label{
+  display: flex;
+  color: #0550c8;
+  border-bottom: 1px solid #0550c8;
+  margin-left: auto;
+}
+
+.form-control-file{
+  display: none;
+}
+
+
+.mbr-posts-comments-card{
+  border-top: 1px solid black;
+}
+
+.member-since{
+  display: flex;
+  justify-content: flex;
+}
+
+.img-btn-hide-save{
+  display: none;
 }
