--- a/myblog/src/App.css
+++ b/myblog/src/App.css
@@ -354,10 +354,12 @@ h4.comment-username {
   float: left;
   left: 50%;
   top: 50%;
+  width: 35%;
   transform: translate(-50%, -50%);
   background: #f1f3f4;
   display: table;
   clear: both;
+  border-radius: 3%;
 }
 
 .modalTitle{
@@ -377,24 +379,48 @@ h4.comment-username {
 
 .modalButton{
   border: 0;
-      background: #78f89f;
-      border-radius: 5px;
-      padding: 0.5rem 1rem;
-      font-size: 0.8rem;
-      line-height: 1;
+  background: #78f89f;
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
+  font-size: 0.8rem;
+  line-height: 1;
+  margin-top: 5%;
+  float: left;
 }
 
+
+
+.modalInputs{
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+
 .modalStyle input[type=text]{
-  width: 25%;
+width: 90%;
 padding: 6px 20px;
-margin: 8px 0;
+margin: 1%;
 box-sizing: border-box;
 }
 
+
+
+.modalRating{
+  width: 30%;
+}
+
+
 .modalStyle label{
-  float: left;
+  float: left;     /* THIS IS CAUSING THE BUTTON ISSUE  */
   padding-right: 20px;
   margin-right: 5px;
+}
+
+
+
+.modalNotes{
+  width: 90% !important;
 }
 
 #MultiListItem-root{
