--- a/myblog/src/App.css
+++ b/myblog/src/App.css
@@ -12,14 +12,24 @@ p {
 /*INDEX PAGE*/
 
 .sidenav-index-parent{
-  width: 20% !important;
-  border: 1px solid red;
+  width: 30% !important;
+  margin-top: 2%;
 }
 
 .main-index-parent{
   width: 60% !important;
   margin-right: 20%;
-  border: 1px solid green;
+  margin-left: 5%;
+}
+
+.news-index{
+  margin-top: 10%;
+}
+
+.weather-index{
+  margin-bottom: 10%;
+  padding: 5%;
+  max-width: 90%;
 }
 
 
@@ -35,7 +45,6 @@ p {
   margin: 2% auto 0px;
   display: flex;
   flex-direction: row;
-  border: 1px solid blue;
 }
 
 .brewery-index-content-parent{
@@ -69,6 +78,8 @@ p {
 .brewery-index-beer-icon, .brewery-index-hours-icon{
   margin-right: 2%;
 }
+
+
 
 
 /* ADD POST REACT-DRAFTS RICH TEXT EDITOR */
@@ -107,8 +118,12 @@ p {
 
 
 /*Twitter Iframe */
+
+.twitter-container{
+}
+
 .twitter-embed {
-   width: 250px;
+   max-width: 100%;
    height: 500px;
    overflow: scroll;
 }
@@ -141,6 +156,7 @@ display: inline-block;
 color: #0550c8;
 border-bottom: 1px solid #0550c8;
 margin-left: auto;
+cursor: pointer;
 }
 
 #post-entry{
