--- a/myblog/src/App.css
+++ b/myblog/src/App.css
@@ -23,10 +23,11 @@ p {
 }
 
 
-.news-index-parent{
+.news-index-parent, .events-index-parent{
   margin-top: 10%;
   margin-bottom: 10%;
   align-items: center;
+
 }
 
 .brews-news-paragraph-two:empty, .brews-news-paragraph-three:empty{
@@ -75,6 +76,11 @@ p {
   border-radius: 4%;
 }
 
+.closest-breweries-imgs{
+  max-height: 200px;
+  max-width: 100%;
+}
+
 .brewery-index-beers-served, .brewery-index-hours{
   display: flex;
   align-items: center;
@@ -82,7 +88,7 @@ p {
   max-height: 10%;
 }
 
-.brewery-index-content-subcontainer, .news-index-li{
+.brewery-index-content-subcontainer, .news-index-li, .events-index-li{
   background-color: #F6F6F6;
   padding: 2%;
   margin: 1% 10%;
@@ -139,15 +145,14 @@ p {
 }
 
 .brewery-index-map-img{
+  width: 100%;
   max-width:100%;
   height: auto;
+  max-height: 200px;
   object-fit: cover;
-  border: 1px solid black;
 }
 
-.brewery-index-map-img:hover{
-  transform: scale(1.5);
-}
+
 
 /*HOME PAGE */
 
@@ -159,7 +164,7 @@ p {
 
 .twitter-embed {
    max-width: 100%;
-   height: 500px;
+   height: 1200px;
    overflow: scroll;
 }
 .twitter-embed::-webkit-scrollbar {
@@ -387,11 +392,10 @@ border-color: black;
 
 /*horizontal nav bar*/
 
-
-li {
-  display: inline;
-  float: left;
+li{
+  list-style-type: none;
 }
+
 
 .navbar{
   background-color: white;
@@ -404,6 +408,11 @@ li {
   overflow: hidden;
   background-color: #dddddd;
 }
+.navbar li {
+  display: inline;
+  float: left;
+}
+
 .nav-pages {
   margin: 0%;
   padding: 0;
@@ -717,5 +726,18 @@ body {
 
 
 .img-btn-hide-save{
+  display: none;
+}
+
+
+
+/*wyzwig*/
+
+
+.rdw-block-wrapper, .rdw-fontsize-wrapper, .rdw-fontfamily-wrapper{
+  display: none;
+}
+
+.rdw-option-wrapper[title="Monospace"], .rdw-option-wrapper[title="Superscript"], .rdw-option-wrapper[title="Subscript"]{
   display: none;
 }
